Implemented The Repository Pattern

--- a/LeaveManagement.Web/Views/Shared/_Layout.cshtml
+++ b/LeaveManagement.Web/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Leave Management
                             </a>
-                            <ul class="dropdown-menu" arial-labelledby="navbarDropdown">
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" asp-controller="LeaveTypes" asp-action="Index">Leave Types</a></li>
                                 <li><a class="dropdown-item" href="#">Leave Allocations</a></li>
                                 <li><a class="dropdown-item" href="#">Leave Requests</a></li>
