--- a/LeaveManagement.Web/Views/Shared/_LoginPartial.cshtml
+++ b/LeaveManagement.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
-﻿@using LeaveManagement.Web.Data
-@using Microsoft.AspNetCore.Identity
+﻿@using Microsoft.AspNetCore.Identity
+
 @inject SignInManager<Employee> SignInManager
 @inject UserManager<Employee> UserManager
 
