--- a/LeaveManagement.Web/Views/LeaveTypes/Index.cshtml
+++ b/LeaveManagement.Web/Views/LeaveTypes/Index.cshtml
@@ -26,32 +26,30 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Name)
+                    @Html.DisplayFor(modelItem => item.Name)                
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.DefaultDays)
+                @Html.DisplayFor(modelItem => item.DefaultDays)
                 </td>
                 <td>
                     <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-pencil-alt"></i></a>
-                    <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id"><i class="fas fa-info-circle"></i></a>
-                    <button data-id="@item.Id" class="btn btn-danger deleteBtn" type="button"><i class="fas fa-trash-alt"></i></button>
+                    <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id"> <i class="fas fa-info-circle"></i></a>
+                    <button data-id="@item.Id" class="btn btn-danger deleteBtn" type="button"> <i class="far fa-trash-alt"></i></button>
                 </td>
             </tr>
         }
     </tbody>
 </table>
 
-<form id="deleteForm" asp-action="Delete">
-    <input type="hidden" id="leaveTypeId" name="Id"/>    
+<form id="deleteFrom" asp-action="Delete">
+    <input type="hidden" id="leaveTypeId" name="Id" />
 </form>
 
 @section Scripts {
     <script>
         $(function () {
-
             $('.table').DataTable();
-
-            $('.deleteBtn').click(function(e){
+            $('.deleteBtn').click(function (e) {
                 swal({
                     title: "Are you sure?",
                     text: "Are you sure you want to delete this record?",
@@ -63,10 +61,10 @@
                         var btn = $(this);
                         var id = btn.data("id");
                         $('#leaveTypeId').val(id);
-                        $('#deleteForm').submit();
+                        $('#deleteFrom').submit();
                     }
                 });
-            })
+            });
         });
     </script>
 }
