--- a/LeaveManagement.Web/Views/Shared/_Layout.cshtml
+++ b/LeaveManagement.Web/Views/Shared/_Layout.cshtml
@@ -71,6 +71,11 @@
     <script src="~/lib/sweetalert/sweetalert.min.js"></script>
     <script src="https://cdn.datatables.net/2.0.3/js/dataTables.js"</script>
     <script src="https://cdn.datatables.net/2.0.3/js/dataTables.bootstrap5.js"</script>
+    <script>
+        $(function () {
+            $('.table').DataTable();
+        });
+    </script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
