Fixing Errors, Editing Employee Leave View, Administrator Index View and Admin Leave Request Review

--- a/LeaveManagement.Web/Views/LeaveRequests/Create.cshtml
+++ b/LeaveManagement.Web/Views/LeaveRequests/Create.cshtml
@@ -23,25 +23,25 @@
                 <div class="col-md-6">
                     <div class="form-group">
                         <label asp-for="StartDate" class="control-label"></label>
-                        <input asp-for="StartDate" class="form-control datepicker" type="date" />
+                        <input asp-for="StartDate" class="form-control datepicker" type="date" /> @* !!! *@
                         <span asp-validation-for="StartDate" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
                         <label asp-for="EndDate" class="control-label"></label>
-                        <input asp-for="EndDate" class="form-control datepicker" type="date" />
+                        <input asp-for="EndDate" class="form-control datepicker" type="date" /> @* !!! *@
                         <span asp-validation-for="EndDate" class="text-danger"></span>
                     </div>
                 </div>
             </div>
-            <br />
+            <br/>
             <div class="form-group">
                 <label asp-for="RequestComments" class="control-label"></label>
                 <textarea asp-for="RequestComments" class="form-control"></textarea>
                 <span asp-validation-for="RequestComments" class="text-danger"></span>
             </div>
-            <br />
+            <br/>
             <div class="form-group">
                 <a class="btn btn-dark" asp-action="Index">Back to My Leave</a>
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -49,4 +49,3 @@
         </form>
     </div>
 </div>
-
