--- a/LeaveManagement.Web/Views/LeaveRequests/Edit.cshtml
+++ b/LeaveManagement.Web/Views/LeaveRequests/Edit.cshtml
@@ -37,10 +37,10 @@
                 <input asp-for="RequestComments" class="form-control" />
                 <span asp-validation-for="RequestComments" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Approved" /> @Html.DisplayNameFor(model => model.Approved)
-                </label>
+            <div class="form-group">
+                <label asp-for="Approved" class="control-label"></label>
+                <input asp-for="Approved" class="form-control" />
+                <span asp-validation-for="Approved" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
@@ -73,4 +73,3 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
